// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid-list-components should create a Grid component 1`] = `
<Styled(Grid)
  className="ListBox-styledScrollbars"
  columnCount={2}
  columnWidth={50}
  dataTestid="fixed-size-grid"
  direction="ltr"
  height={300}
  itemData={
    {
      "actions": {
        "cancel": [Function],
        "confirm": [Function],
        "onCtrlF": undefined,
        "select": [MockFunction],
        "selectAll": undefined,
        "setScrollPosition": undefined,
      },
      "checkboxes": false,
      "column": undefined,
      "columnCount": 2,
      "dataOffset": undefined,
      "direction": "ltr",
      "focusListItems": undefined,
      "freqIsAllowed": true,
      "frequencyMax": undefined,
      "frequencyMode": "N",
      "heyHey": "hey hey",
      "histogram": false,
      "isLocked": false,
      "isModal": [MockFunction],
      "isSingleSelect": false,
      "keyboard": "keyboard",
      "layoutOptions": {
        "layoutOrder": "column",
      },
      "pages": "pages",
      "rowCount": 200,
      "showGray": true,
      "showSearch": undefined,
      "showTick": true,
      "sizes": {
        "columnCount": 2,
        "columnWidth": 50,
        "itemHeight": 100,
        "itemPadding": 4,
        "listCount": 100,
        "listHeight": 300,
        "overflowStyling": {
          "overflowX": "hidden",
        },
        "rowCount": 200,
        "scrollBarWidth": 10,
      },
      "textAlign": "right",
      "translator": undefined,
    }
  }
  onItemsRendered={[Function]}
  rowCount={200}
  rowHeight={100}
  style={
    {
      "overflowX": "hidden",
    }
  }
  useIsScrolling={true}
  width={100}
>
  [MockFunction]
</Styled(Grid)>
`;

exports[`grid-list-components should create a List component 1`] = `
<Styled(List)
  className="ListBox-styledScrollbars"
  dataTestid="fixed-size-list"
  direction="ltr"
  height={300}
  itemData={
    {
      "actions": {
        "cancel": [Function],
        "confirm": [Function],
        "onCtrlF": undefined,
        "select": [MockFunction],
        "selectAll": undefined,
        "setScrollPosition": undefined,
      },
      "checkboxes": false,
      "column": false,
      "dataOffset": undefined,
      "direction": "ltr",
      "focusListItems": undefined,
      "freqIsAllowed": true,
      "frequencyMax": undefined,
      "frequencyMode": "N",
      "heyHey": "hey hey",
      "histogram": false,
      "isLocked": false,
      "isModal": [MockFunction],
      "isSingleSelect": false,
      "keyboard": "keyboard",
      "layoutOptions": {
        "layoutOrder": "column",
      },
      "listCount": undefined,
      "pages": "pages",
      "showGray": true,
      "showSearch": undefined,
      "showTick": true,
      "sizes": {
        "columnCount": 2,
        "columnWidth": 50,
        "itemHeight": 100,
        "itemPadding": 4,
        "listCount": 100,
        "listHeight": 300,
        "overflowStyling": {
          "overflowX": "hidden",
        },
        "rowCount": 200,
        "scrollBarWidth": 10,
      },
      "textAlign": "right",
      "translator": undefined,
    }
  }
  itemSize={100}
  layout="vertical"
  onItemsRendered={[Function]}
  overscanCount={2}
  useIsScrolling={true}
  width={100}
>
  [MockFunction]
</Styled(List)>
`;
